# rs_wgpu_prac

./: README.md
buffer/: Cargo.toml
buffer/src/: main.rs  shader.frag  shader.vert
pipeline/: Cargo.toml
pipeline/src/: main.rs  shader.frag  shader.vert
swapchain/: Cargo.toml
swapchain/src/: main.rs
window/: Cargo.toml
