[package]
name = "pipeline"
version = "0.1.0"
authors = ["kumusan <ryogi0200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.23.0"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
shaderc = "0.6"

[build-dependencies]
shaderc = "0.6"
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"
